--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.0.1"
 
 [deps]
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
+HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 InfoZIP = "f4508453-b816-52ab-a864-26fc7f6211fc"
 
 [compat]
